test/fail/M0228_1.mo
module {
  public func hey() {
    mixin() {};
  };
}
